galaxy-basic/templates/app-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: galaxy-app-svc
  labels:
    app: galaxy 
    tier: web
spec:
  type: NodePort
  ports: 
  - protocol: TCP
    port: 8081 
    targetPort: 8080
  selector:
    app: galaxy
    tier: web
