galaxy-basic/templates/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: galaxy-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: galaxy-app-svc
          servicePort: 8081
